<resources>
    <string name="app_name">wARp</string>
    <string name="model_dialog_title">Pick a model</string>
    <string name="no_object_selected">No object selected</string>
    <string name="double_press_back_exit">Press BACK again to exit</string>

    <!-- Nav drawer labels -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- Toolbar titles -->
    <string name="about_title">About</string>
    <string name="create_course_title">Create Course</string>
    <string name="find_course_title">Find Course</string>
    <string name="home_title">Home</string>
    <string name="lobby_title">Lobby</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="stats_title">Stats</string>
    <string name="game_title">Game</string>

    <string name="about_text">This app was developed as the product for an 8th semester project report by SW805f18, a student group at Aalborg University in the spring of 2018.</string>

    <!--Find course fragment-->
    <string name="find_course_search_hint">Search for course</string>
    <string name="find_course_join_by_code_hint">Enter course code</string>
    <string name="find_course_label_distance_text">Distance</string>
    <string name="find_course_label_type_text">Type</string>
    <string name="find_course_label_age_text">Age</string>
    <string name="find_course_label_players">Players: </string>
    <string name="find_course_label_age_group">Age Group: </string>
    <string name="find_course_label_distance">Distance: </string>
    <string-array name="find_course_distance_spinner_array">
        <item>1km</item>
        <item>2km</item>
        <item>5km</item>
        <item>10km</item>
        <item>@string/infinity</item>
    </string-array>
    <string-array name="find_course_age_spinner_array">
        <item>3–5</item>
        <item>6–7</item>
        <item>8–9</item>
        <item>10–12</item>
        <item>13–16</item>
        <item>17–23</item>
        <item>24+</item>
    </string-array>

    <!--Group fragment-->
    <string name="group_make_text">Make a new group</string>
    <string name="group_join_text">Join a group</string>

    <string name="wifi_p2p_drawer">WiFi P2P</string>
    <string name="scan_wifi_p2p">Scan WiFi P2P</string>
    <string name="create_group">Create</string>
    <string name="request_group_info">Join</string>
    <string name="test_wifi_p2p">Test</string>


    <!--Login activity-->
    <string name="login_button_text">Login</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_email">Email</string>

    <!--Home fragment-->
    <string name="home_find_course_button">Find Course</string>
    <string name="home_create_course_button">Create Course</string>

    <!--Drawer-->
    <string name="drawer_header_lobby_button_text">Lobby</string>

    <!--Create course fragment-->
    <string name="create_course_max_players_text">Max players:</string>
    <string name="create_course_max_players_hint">Enter max players</string>
    <string name="create_course_max_groups_text">Max groups:</string>
    <string name="create_course_max_groups_hint">Enter max groups</string>
    <string name="create_course_min_group_size_text">Min groups size:</string>
    <string name="create_course_min_group_size_hint">Enter minimum group size</string>
    <string name="create_course_group_formation_text">Group formation:</string>
    <string name="create_course_course_name_hint">Enter course name</string>
    <string-array name="create_course_group_selection_array">
        <item>Troop leader</item>
        <item>Free for all</item>
        <item>Autogrouping</item>
    </string-array>

    <!--Profile fragment-->
    <string name="profile_name_hint">Full name</string>
    <string name="profile_displayname_hint">Display name</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_birthday_hint">Birthday</string>
    <string name="profile_troop_hint">Troop name</string>


    <!--Lobby fragment-->
    <string name="lobby_start_button_text">Start</string>
    <string name="lobby_game_starting">Starting…</string>
    <string name="lobby_autogroup_start">Start Autogroup</string>
    <string name="lobby_autogroup_stop">Stop Autogroup</string>

    <!--Others-->
    <string name="infinity">&#8734;</string>
    <string name="game_starting">Starting…</string>
    <string name="waiting">Waiting…</string>
    <string name="no_chest">No Chest Nearby</string>
    <string name="map_title">Map</string>
    <string name="lobby_game_start_toast">Game starting</string>
    <string name="auto_enabled_wifi">Enabling wifi …</string>
    <string name="hosting_anchor">Hosting Anchor…</string>
    <string name="anchor_hosted">Anchor hosted!</string>
    <string name="resolving_anchor">Resolving Anchor…</string>
    <string name="anchor_resolved">Anchor resolved!</string>
    <string name="transformable_node_created">Transformable Node created!</string>
    <string name="is_owner">Owner</string>
    <string name="select_course_from_catalog">Select task(s) from catalog</string>
    <string name="open_chest">Open Chest</string>
    <string name="waiting_for_lobby_leader">Waiting for lobby leader…</string>

</resources>
