<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/scanButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="scanPeers"
        android:text="@string/scan_wifi_p2p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/requestGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="joinGroup"
        android:text="@string/request_group_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="createGroup"
        android:text="@string/create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/requestGroup" />

    <Button
        android:id="@+id/button2"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_wifi_p2p"
        android:onClick="testWifiP2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanButton" />

</android.support.constraint.ConstraintLayout>
